src/compose/tests/invalid_identifiers/struct.wgsl
#define_import_path structs

pub struct IsFine {
    fine: f32,
}

pub struct Isbad_ {
    fine_member: f32,
}
